# PM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Containerfile  compose.yaml
.claude/: settings.local.json
backend/: AGENTS.md  pyproject.toml
backend/app/: ai_client.py  ai_routes.py  ai_schemas.py  auth.py  board.py  db.py  main.py
backend/tests/: test_ai_chat.py  test_ai_smoke.py  test_auth.py  test_board.py  test_db.py  test_smoke.py
docs/: DATABASE.md  DEV_CONTAINER.md  PLAN.md  code_review.md
frontend/: AGENTS.md  next.config.ts  package.json  playwright.config.ts
frontend/scripts/: copy-site.mjs
frontend/src/app/login/: page.tsx
frontend/src/components/: AuthGate.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  LogoutButton.tsx  NewCardForm.tsx
frontend/src/components/chat/: ChatSidebar.tsx
frontend/src/lib/: aiChatApi.test.ts  aiChatApi.ts  boardApi.test.ts  boardApi.ts  kanban.test.ts  kanban.ts
frontend/src/test/: setup.ts
frontend/tests/: auth.spec.ts  chat.spec.ts  kanban.spec.ts
frontend/tests/helpers/: login.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
